--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 :root {
-    --cor-fundo:rgb(109, 48, 241);
+    --cor-fundo:rgb(140, 91, 245);
     --cor-fundo-dark:rgb(63, 7, 205);
     --cor-font:white;
 }
@@ -14,18 +14,41 @@
 
 .container {
     display: flex;
-background: var(--cor-fundo);
+    flex-direction: column;
+    align-items: center;
+background: var(--cor-fundocor-fundo);
+}
+
+h1 {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .trabuleiro {
     display: grid;
-    grid-template-columns: 33% 33% 33%;
-    grid-template-rows: 33% 33% 33%;
-    max-width: 100%;
+    grid-template-columns: repeat(3, 150px);
+    grid-template-rows: repeat(3, 150px);
+    max-width: 500%;
 }
 
 .grid {
-    border: 2px solid red;
+    background: var(--cor-fundo);
+    border: 2px solid rgb(0, 0, 0);
     min-height: 100px;
     min-width: 100px;
+    cursor: pointer;
+}
+
+#reinicia {
+    width: 100px;
+    height: 90px;
+    background: var(--cor-fundo);
+    cursor: pointer;
+    margin-top: 100px;
+    color: white;
+    font-size: 20px;
+    animation:reverse;
+}
+
+footer {
+margin-top: 50px;
 }
